add_library(query_classifier SHARED query_classifier.cc ../plugin_process/common/pp_io.cpp)
include_directories(. ../plugin_process/common)
set_target_properties(query_classifier PROPERTIES VERSION "1.0.0")
install(TARGETS query_classifier COMPONENT lib DESTINATION ${MAXSCALE_LIBDIR})
if(BUILD_TESTS)
  add_subdirectory(test)
endif()
